# jvspatial

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_REVISION.md  AUDIT.md  AUTHENTICATION_IMPLEMENTATION_SUMMARY.md  AUTHORS  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.base  PRD.md  QUICKSTART.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  SPEC.md  api.py  entities.py  jvspatial-async-first-migration-plan.md  lib.py  pyproject.toml  requirements-dev.txt  requirements-lambda.txt  requirements-optional.txt  requirements-prod.txt  requirements-test.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: README.md  VERSIONING.md  WORKFLOW_SUMMARY.md  benchmarks.yml  pre-commit.yaml  publish.yml  release-jvspatial.yaml  security.yml  test-jvspatial.yaml
.planning/superpowers/: OAUTH-HANDOFF.md
core/: annotations.py
db/: database.py  factory.py  jsondb.py  mongodb.py
docker/: .env.example  README.md  docker-compose.yml
docker/pg-init/: 01-extensions.sql
docs/: graph-traversal.md
docs/md/: README.md  advanced-usage.md  api-architecture-analysis.md  api-architecture.md  api-keys.md  api-refactoring-opportunities.md  architectural-decisions.md  attribute-annotations.md  aurora-serverless-deployment.md  auth-quickstart.md  authentication.md  benchmarks.md  caching.md  context-management-guide.md  context_management_guide.md  contributing.md  core_architecture_overview.md  cursor-pagination.md  custom-database-guide.md  custom-log-levels.md  database-config.md  database-registry.md  database_architecture.md  database_versioning.md  decorator-reference.md  decorator_reference.md  design-decisions.md  dynamodb-guide.md  endpoint-registration-guide.md  entity-reference.md  environment-configuration.md  environment-keys-reference.md  error-handling.md  examples.md  file-storage-architecture.md  file-storage-usage.md  graph-context.md  graph-traversal.md  import-patterns.md  infinite-walk-protection.md  (+35 more)
examples/: README.md  agent_graph.py  auth_demo.py  custom_database_example.py  dynamic_endpoint_removal.py  dynamic_server_demo.py  endpoint_decorator_demo.py  endpoint_respond_demo.py  exception_handling_demo.py  fastapi_server.py  file_storage_demo.py  graphcontext_demo.py  modern_query_interface.py  multi_target_hooks_demo.py  orm_demo.py  scheduler_example.py  server_demo.py  simple_dynamic_example.py  test_examples.py  testing_with_graphcontext.py  travel_graph.py  traversal_demo.py  walker_events_demo.py  walker_reporting_demo.py  walker_traversal_demo.py  webhook_examples.py
examples/api/: README.md  authenticated_endpoints_example.py  diagnostic_auth_swagger.py  dynamic_server_demo.py  lambda_example.py  lambda_example_global.py  server_example.py  test_auth_working.py
examples/auth/: .env.example  README.md  auth_demo.py  auth_example.py
examples/core/: README.md  cities.py  spatial_search.py
examples/database/: README.md  crud_demo.py  custom_database_example.py  custom_database_registry_example.py  database_switching_example.py  multi_database_example.py  unified_query_interface_example.py
examples/demo_tasks/: __init__.py  walkers.py
examples/error_handling/: README.md  basic_error_handling.py  database_error_handling.py  walker_error_handling.py
examples/integrations/: README.md  webhook_examples.py
examples/logging/: README.md  custom_log_levels_example.py  test_custom_levels_import.py
examples/scheduler/: dynamic_scheduler_demo.py
examples/server/: README.md  comprehensive_server_example.py  dynamic_endpoint_removal.py  dynamic_server_demo.py  endpoint_decorator_demo.py  endpoint_respond_demo.py  exception_handling_demo.py  fastapi_server.py  server_demo.py  server_example.py  webhook_examples.py
examples/storage/: README.md  file_storage_demo.py  storage_example.py
examples/testing/: README.md
examples/visualization/: progressive_graph_viewer.html
examples/walkers/: README.md  multi_target_hooks_demo.py  traversal_demo.py  walker_events_demo.py  walker_reporting_demo.py
jvgraph-ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
jvgraph-ui/scripts/: embed.cjs
jvgraph-ui/src/: App.tsx  cytoscape-dagre.d.ts  index.css  vite-env.d.ts
jvspatial/: __init__.py  actions.py  cli.py  collection.py  config.py  env.py  env_adapter.py  exceptions.py  interaction_response.py  version.py
jvspatial/api/: README.md  __init__.py  _route_utils.py  api.py  config.py  config_groups.py  constants.py  context.py  deferred_invoke_route.py  endpoint_response.py  endpoint_router.py  exceptions.py  lambda_server.py  protocols.py  server.py  server_app_factory.py  server_configurator.py  server_lifecycle.py  server_registration.py  server_run.py
jvspatial/async_utils/: __init__.py
jvspatial/cache/: README.md  __init__.py  base.py  factory.py  layered.py  memory.py  redis.py
jvspatial/common/: __init__.py  context.py  factory.py  serialization.py
jvspatial/core/: README.md  __init__.py  annotations.py  context.py  entities.py  events.py  graph.py  graph_expansion.py  graph_payload.py  lib.py  migrations.py  pager.py  utils.py  validate.py
jvspatial/db/: README.md  __init__.py  _atomic.py  _cache.py  _observable.py  _path_locks.py  _postgres_translate.py  _sqlite_translate.py  database.py  dynamodb.py  factory.py  jsondb.py  manager.py  (+6 more)
tests/: conftest.py  test_config.py  test_create_task.py  test_env.py  test_env_adapter_eventbridge_validation.py  test_node_operations.py  test_normalize_optional_secret.py
(+385 files in other folders)
