[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "jvspatial"
version = "0.0.1"
description = "An asynchronous object-spatial Python library for persistence and business logic application layers."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "TrueSelph Inc.", email = "adminh@trueselph.com"},
]
keywords = ["async", "graph", "spatial", "persistence", "business-logic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "motor",
    "pymongo",
    "PyJWT",  # JWT token handling for authentication
    "bcrypt",  # Password hashing for authentication
    "schedule>=1.2.2",  # Job scheduling
    "typing-extensions",  # For @override decorator and enhanced typing
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "pre-commit>=3.0.0",
    "python-dotenv>=1.0.0",
]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]
scheduler = [
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/TrueSelph/jvspatial"
Repository = "https://github.com/TrueSelph/jvspatial"
Issues = "https://github.com/TrueSelph/jvspatial/issues"
Documentation = "https://github.com/TrueSelph/jvspatial/tree/main/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["jvspatial*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as an asyncio test",
]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::PendingDeprecationWarning",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
exclude = ["examples/"]

# Relax third-party imports that lack types
[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "magic.*",
    "motor.*",
    "schedule.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["jvspatial"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]